VERSION [1.2]
-------------

VERSION [1.1]
-------------
New precompiled script cache naming scheme.
Overriding opcode assignments now automatically invalidate inherited assignments.
commons-ui dependency was discontinued and integrated directly into NP.
A lot of definitions moved to previous protocol versions to increase their effective scope; legacy definitions added/updated.
Updated henna related packet definitions for 2015-06-10 protocol version 24 henna stealth patch. See the associated XMLs on how to revert that if using with the installer's version 24 client.

VERSION [1.0]
-------------
Further work on removing duplicate features from dependencies.
Replaced an incompatible DDS reading library with an own-made reader specifically for Lineage II crests (DXT1).
Removed anti-decompilation library integration.

VERSION [0.8-SNAPSHOT] (pre-releases)
----------------------
Further work on internal dependency redimization.
Support for NA infinite odyssey protocol 24.
Fixed an issue where reloading packet definitions would cause the active packet display configuration to be reset, even if it is exactly the same as saved to file.
More interpreters & updated entity name lists.
Reintroduced support for l2j login servers.

Internal refactoring related to de-bloating & opensourcing dependencies.

Fixed issues with CPU hogging while connecting to a server or after failing to connect to a server.

Packet structure handling implementation related changes:
Field value condition/interpreter/modifier implementation moved to netpro-commons. It is a fundamental way to deal with typed fields; not merely restricted to L2 or GUI mode.
As a result, netpro-commons-ui was removed. The implementation was changed to better suit today's use cases.
Added protocol 610 definition.

Support for legacy login ServerList with > 1 gameserver injection. Also, legacy ServerLists are now properly interpreted.
Support for running on a JRE; script.cache is now included in a release by default.