@@ -13,99 +13,77 @@
 # limitations under the License.
 
 ########################################
-## Performance
+## Section BEGIN: Performance
 
 # How often (ms) to do I/O for packets sent by/to login (authd) clients.
 # A relatively high value (like the default one) can be safely used here.
-# 
 # Default: 100
-# 
 PacketIOIntervalForLoginClients = 100
 
 # How often (ms) to do I/O for packets sent by/to login (authd) servers.
 # A relatively high value (like the default one) can be safely used here.
-# 
 # Default: 100
-# 
 PacketIOIntervalForLoginServers = 100
 
 # How often (ms) to do I/O for packets sent by/to game clients.
 # Directly affects how fast packets are forwarded through the proxy.
 # The value should generally be as low as your CPU can handle.
-# 
 # Default: 3
-# 
 PacketIOIntervalForGameClients = 3
 
 # How often (ms) to do I/O for packets sent by/to game clients.
 # Directly affects how fast packets are forwarded through the proxy.
 # The value should generally be as low as your CPU can handle.
-# 
 # Default: 3
-# 
 PacketIOIntervalForGameServers = 3
 
 # How often (ms) to accept pending connections from login (authd) clients.
 # In order not to waste CPU cycles, this should be set just a little below the built-in client's connection timeout.
-# 
 # Default: 2500
-# 
 ConnectionIntervalForLoginClients = 2500
 
 # How often (ms) to accept pending connections from game clients.
 # In order not to waste CPU cycles, this should be set just a little below the built-in client's connection timeout.
-# 
 # Default: 750
-# 
 ConnectionIntervalForGameClients = 750
 
-## Performance
+## Section END: Performance
 ########################################
 
 ########################################
-## Debug
+## Section BEGIN: Debug
 
-# Whether to ignore the precompiled script cache, even though that will increase the application load time.
+# Whether to ignore the precompiled script cache, even though doing so will increase the application load time.
 # The obvious advantadge is that you will not need to keep deleting the script cache after making changes in script source files.
-# 
 # Default: false
-# 
 DisableScriptCache = false
 
 # Whether to enable a part of MMOCore debug logging
-# 
 # Default: false
-# 
 MMOCoreDebug = false
 
-## Debug
+## Section END: Debug
 ########################################
 
 ########################################
-## GUI
+## Section BEGIN: GUI
 
 # If true, only connections to game servers will open tabs in the GUI, pretty much like in l2phx (you can still open login packet logs as usual).
 # If false, every incoming connection will automatically open a tab in the GUI, regardless of type.
-# 
 # Default: false
-# 
 NoTabsForLoginConnections = false
 
 # Specifies the amount of packets read from disk, after which CPU time will be yielded for other tasks.
 # 0 disables yielding and will deliver the fastest loading performance. The lower the value, the slower packets will be read from disk.
 # Only enable this feature if you experience system-wide stuttering during packet loading (excessive DPC latency in Win32 terms).
-# 
 # Default: 0
-# 
 PacketLogLoadCpuYieldThreshold = 0
 
 # Specifies the amount of time, in milliseconds, to yield the CPU for once the threshold is reached.
 # Has no effect if threshold is zero. The higher the value, the slower packets will be read from disk.
-# 
 # Default: 10
-# 
 PacketLogLoadCpuYieldDuration = 10
 
-## GUI
+## Section END: GUI
 ########################################
 
