@@ -2,7 +2,7 @@ L2EMU-UNIQUE NETWORK PROTOCOL APPLICATION
 (FORMERLY L2JFREE PACKET ANALYSIS & VISUALIZATION TOOL)
 FOR LINEAGE II
 Prelude PTS - Infinite Odyssey (NA)
-VERSION 1.2 (SNAPSHOT)
+VERSION 1.2
 March 19, 2013
 Revised June 5, 2015
 
