@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>net.l2emuproject</groupId>
 		<artifactId>l2emuproject-netpro-main</artifactId>
-		<version>1.2-SNAPSHOT</version>
+		<version>1.2</version>
 		<relativePath>../l2emuproject-netpro-main</relativePath>
 	</parent>
 	<artifactId>l2emuproject-netpro-commons</artifactId>
